force-app/main/default/objects/ProjectInvoiceLineItemDetail__c/ProjectInvoiceLineItemDetail__c.object-meta.xml
<CustomObject>
    <label>Project Invoice Line Item Detail</label>
    <nameField>
        <displayFormat>PILID-{000000000}</displayFormat>
        <label>Project Invoice Line Item Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Invoice Line Items Detail</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>