force-app/main/default/objects/ProjectInvoiceLineItemDetail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Invoice Line Items Detail</relationshipLabel>
    <relationshipName>Project_Invoice_Line_Items_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>