force-app/main/default/objects/ProjectInvoiceLineItemDetail__c/fields/BillingStatus__c.field-meta.xml
<CustomField>
    <fullName>BillingStatus__c</fullName>
    <label>Billing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billable</fullName>
            </value>
            <value>
                <fullName>NotBillable</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>Disputed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>