force-app/main/default/objects/ProjectInvoiceLineItemDetail__c/fields/ChargeEntryTypeAmount__c.field-meta.xml
<CustomField>
    <fullName>ChargeEntryTypeAmount__c</fullName>
    <formula>IF(ISPICKVAL( EntryType__c , &#39;Charge&#39;), RateCalculated__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Entry Type Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>