force-app/main/default/objects/ProjectInvoiceLineItemDetail__c/fields/CreditEntryTypeAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditEntryTypeAmount__c</fullName>
    <formula>IF(ISPICKVAL( EntryType__c , &#39;Credit&#39;), RateCalculated__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Entry Type Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>