force-app/main/default/objects/ProjectInvoiceLineItemDetail__c/fields/EntryType__c.field-meta.xml
<CustomField>
    <fullName>EntryType__c</fullName>
    <label>Entry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>