force-app/main/default/objects/ProjectInvoiceLineItemDetail__c/fields/LaborTaxLawsonID__c.field-meta.xml
<CustomField>
    <fullName>LaborTaxLawsonID__c</fullName>
    <label>Labor Tax Lawson ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>