force-app/main/default/objects/ProjectInvoiceLineItemDetail__c/fields/LaborTaxRate__c.field-meta.xml
<CustomField>
    <fullName>LaborTaxRate__c</fullName>
    <label>Labor Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>