force-app/main/default/objects/ProjectInvoiceLineItemDetail__c/fields/LocationNumber__c.field-meta.xml
<CustomField>
    <fullName>LocationNumber__c</fullName>
    <description>This field can be populated when there is no project location info available.</description>
    <label>Location Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>