force-app/main/default/objects/ProjectInvoiceLineItemDetail__c/fields/PaymentEntryTypeAmount__c.field-meta.xml
<CustomField>
    <fullName>PaymentEntryTypeAmount__c</fullName>
    <formula>IF(ISPICKVAL( EntryType__c , &#39;Payment&#39;), RateCalculated__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Entry Type Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>