force-app/main/default/objects/ProjectInvoiceLineItemDetail__c/fields/ProjectId__c.field-meta.xml
<CustomField>
    <fullName>ProjectId__c</fullName>
    <formula>CASESAFEID(ProjectInvoiceLineItem__r.ProjectInvoice__r.Project__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProjectId</label>
    <type>Text</type>
</CustomField>