force-app/main/default/objects/ProjectInvoiceLineItemDetail__c/fields/ProjectInvoiceLineItem__c.field-meta.xml
<CustomField>
    <fullName>ProjectInvoiceLineItem__c</fullName>
    <label>Project Invoice Line Item</label>
    <referenceTo>ProjectInvoiceLineItem__c</referenceTo>
    <relationshipLabel>Project Invoice Line Items Detail</relationshipLabel>
    <relationshipName>Project_Invoice_Line_Items_Detail</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>