force-app/main/default/objects/ProjectInvoiceLineItemDetail__c/fields/ProjectLocation__c.field-meta.xml
<CustomField>
    <fullName>ProjectLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Location</label>
    <referenceTo>ProjectLocation__c</referenceTo>
    <relationshipLabel>Project Invoice Line Items Detail</relationshipLabel>
    <relationshipName>Project_Invoice_Line_Items_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>