force-app/main/default/objects/ProjectInvoiceLineItemDetail__c/fields/ProjectLocationState__c.field-meta.xml
<CustomField>
    <fullName>ProjectLocationState__c</fullName>
    <formula>TEXT(ProjectLocation__r.Location__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Location State</label>
    <type>Text</type>
</CustomField>