force-app/main/default/objects/ProjectInvoiceLineItemDetail__c/fields/RateCalculated__c.field-meta.xml
<CustomField>
    <fullName>RateCalculated__c</fullName>
    <description>This field is to inverse Rate__c for credit and payment entry type</description>
    <formula>(
	Rate__c * 
	(
		IF(
			OR (ISPICKVAL( EntryType__c , &quot;Payment&quot;),ISPICKVAL(EntryType__c , &quot;Credit&quot;)),
			-1,
			1)
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate Calculated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>