force-app/main/default/objects/ProjectInvoiceLineItemDetail__c/fields/SalesTax__c.field-meta.xml
<CustomField>
    <fullName>SalesTax__c</fullName>
    <formula>(BLANKVALUE(LaborTaxRate__c,0) * (Rate__c / 100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>