force-app/main/default/objects/ProjectInvoiceLineItemDetail__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target</label>
    <referenceTo>Target__c</referenceTo>
    <relationshipLabel>Project Invoice Line Items Detail</relationshipLabel>
    <relationshipName>Project_Invoice_Line_Items_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>